# Modern-CPP-Programming-Cookbook-Second-Edition

./: .gitignore  CMakeLists.txt  README.md  make_vs2019.bat
Chapter01/: CMakeLists.txt  main.cpp  recipe_1_01.h  recipe_1_02.h  recipe_1_03.h  recipe_1_04.h  recipe_1_05.h  recipe_1_06.h  recipe_1_07.h  recipe_1_08.h  recipe_1_09.h  recipe_1_10.h  recipe_1_11_1.cpp  recipe_1_11_1.h  recipe_1_11_2.cpp  recipe_1_11_2.h  recipe_1_11_3.cpp  recipe_1_12.h  recipe_1_13.h  recipe_1_14.h
Chapter02/: CMakeLists.txt  main.cpp  recipe_2_01.h  recipe_2_02.h  recipe_2_03.h  recipe_2_04.h  recipe_2_05.h  recipe_2_06.h  recipe_2_07.h  recipe_2_08.h  recipe_2_09.h  recipe_2_10.h  recipe_2_11.h  recipe_2_12.h  recipe_2_13.h  recipe_2_14.h  string_view.h
Chapter03/: CMakeLists.txt  funclib.h  main.cpp  recipe_3_01.h  recipe_3_02.h  recipe_3_03.h  recipe_3_04.h  recipe_3_05.h  recipe_3_06.h  recipe_3_07.h  recipe_3_08.h  recipe_3_09.h
Chapter04/: CMakeLists.txt  main.cpp  recipe_4_01.h  recipe_4_02.h  recipe_4_03.h  recipe_4_04.h  recipe_4_05.h  recipe_4_06.h
Chapter05/: CMakeLists.txt  main.cpp  recipe_5_01.h  recipe_5_02.h  recipe_5_03.h  recipe_5_04.h  recipe_5_05.h  recipe_5_06.h  recipe_5_07.h  recipe_5_08.h  recipe_5_09.h  recipe_5_10.h  recipe_5_11.h
Chapter06/: CMakeLists.txt  main.cpp  recipe_6_01.h  recipe_6_02.h  recipe_6_03.h  recipe_6_04.h  recipe_6_05.h  recipe_6_06.h  recipe_6_07.h  recipe_6_08.h  recipe_6_09.h  recipe_6_10.h  recipe_6_11.h  recipe_6_12.h  recipe_6_13.h  recipe_6_14.h
Chapter07/: CMakeLists.txt  main.cpp  recipe_7_01.h  recipe_7_02.h  recipe_7_03.h  recipe_7_04.h  recipe_7_05.h  recipe_7_06.h  recipe_7_07.h  recipe_7_08.h  recipe_7_09.h  recipe_7_10.h  recipe_7_11.h  recipe_7_12.h  sample.plays
Chapter08/: CMakeLists.txt  main.cpp  recipe_8_01.h  recipe_8_03.h  recipe_8_04.h  recipe_8_05.h  recipe_8_06.h  recipe_8_07.h  recipe_8_08.h  recipe_8_09.h  recipe_8_10.h  recipe_8_11.h  recipe_8_12.h  recipe_8_13.h
Chapter09/: CMakeLists.txt  main.cpp  recipe_9_01.h  recipe_9_02.h  recipe_9_03.h  recipe_9_04.h  recipe_9_05.h  recipe_9_06.h  recipe_9_07.h  recipe_9_08.h  recipe_9_09.h  recipe_9_10.h
Chapter10/: CMakeLists.txt  control.cpp  control.h  main.cpp  recipe_10_01.h  recipe_10_02.h  recipe_10_03.h  recipe_10_04.h  recipe_10_05.h  recipe_10_06.h  recipe_10_07.h
Chapter11/chapter11bt_01_1/: CMakeLists.txt  main.cpp
Chapter11/chapter11bt_01_2/: CMakeLists.txt  main.cpp
Chapter11/chapter11bt_01_3/: CMakeLists.txt  main.cpp
Chapter11/chapter11bt_02/: CMakeLists.txt  main.cpp
Chapter11/chapter11bt_03/: CMakeLists.txt  main.cpp
Chapter11/chapter11bt_04/: CMakeLists.txt  main.cpp
Chapter11/chapter11bt_05/: CMakeLists.txt  main.cpp
Chapter11/chapter11ca_01/: CMakeLists.txt  main.cpp
Chapter11/chapter11ca_02/: CMakeLists.txt  main.cpp
Chapter11/chapter11ca_03/: CMakeLists.txt  main.cpp
Chapter11/chapter11ca_04/: CMakeLists.txt  main.cpp
Chapter11/chapter11gt_01/: CMakeLists.txt  main.cpp
Chapter11/chapter11gt_02/: CMakeLists.txt  main.cpp
Chapter11/chapter11gt_03/: CMakeLists.txt  main.cpp
Chapter11/chapter11gt_04/: CMakeLists.txt  main.cpp
Chapter11/chapter11gt_05/: CMakeLists.txt  main.cpp
Chapter11/testlib/: point3d.h
Chapter12/chapter12_01_1/: build_vc.bat  main.cpp
Chapter12/chapter12_01_2/: build_vc.bat  geometry.ixx
Chapter12/chapter12_01_3/: build_vc.bat  geometry.h  main.cpp
Chapter12/chapter12_02_1/: build_vc.bat  geometry-literals.ixx  geometry.ixx
Chapter12/chapter12_02_2/: build_vc.bat  geometry-core.ixx  geometry-details.cpp  geometry-literals.ixx  main.cpp
Chapter12/chapter12_02_3/: geometry-core.ixx  geometry-literals.ixx  geometry.ixx
Chapter12/chapter12_02_4/: build_vc.bat  main.cpp
Chapter12/chapter12_03/: CMakeLists.txt  main.cpp
Chapter12/chapter12_04/: CMakeLists.txt  main.cpp
Chapter12/chapter12_05/: CMakeLists.txt  main.cpp
Chapter12/chapter12_06/: CMakeLists.txt  main.cpp  text.txt
Chapter12/chapter12_07/: CMakeLists.txt  main.cpp
Chapter12/chapter12_07_1/: CMakeLists.txt  main.cpp
Chapter12/chapter12_08/: CMakeLists.txt  main.cpp
Chapter12/chapter12_08_1/: CMakeLists.txt  main.cpp
include/: features.h
